--- a/index.html
+++ b/index.html
@@ -20,17 +20,48 @@
      
 </head>
 <body>
-    <section class="grid grid-cols-2 container  mx-auto">
+    <section class="grid-cols-1 md:grid grid-cols-2 container mx-auto">
         <div class="banner-left space-y-[30px]">
 <h1 class="text-[80px] font-bold">It's good <br>
 tea time at The<br> Tea House</h1>
 <p class="text-[#777777]">Tea and Botanical Solutions Supplier Give Optimum <br> Satisfaction To Your Taste Buds.</p>
 <button class="py-3 px-5 rounded-md text-white font-semibold bg-linear-to-r from-[#ff8938] to-[red]">Explor  More <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right"></i></span> </button>
         </div>
-        <div class="banner-right">
+        <div class="banner-right flex justify-end items-end relative">
 <img src="images/banner.png" alt="pic">
+<div class="absolute right-[250px] bottom-[-30px]"><img src="images/Group 8.png"></div>
         </div>
     </section>
 
+<!--Fetured section-->
+
+<section class="container mx-auto my-[90px]">
+    <div class="text-center max-w-[65%] mx-auto mb-[30px]">
+        <h2 class="font-bold text-[45px]">Our Featured Products</h2>
+        <p class="text-[#777777]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+    </div>
+    <div class="fetured-card-parent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+        <div class="fetured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center rounded-md">
+         <img src="images/tea-1.png" class="mx-auto mb-4">
+         <h2 class="font-semibold text-xl">Milk Tea</h2>
+         <p class="text-[#777777]"">Creamer could be replaced by fresh milk</p>
+        </div>
+         <div class="fetured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center rounded-md">
+         <img src="images/tea-2.png" class="mx-auto mb-4">
+         <h2 class="font-semibold text-xl">Blck Tea</h2>
+         <p class="text-[#777777]"">Creamer could be replaced by fresh milk</p>
+        </div>
+         <div class="fetured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center rounded-md">
+         <img src="images/tea-3.png" class="mx-auto mb-4">
+         <h2 class="font-semibold text-xl">Lemon Tea</h2>
+         <p class="text-[#777777]"">Creamer could be replaced by fresh milk</p>
+        </div>
+         <div class="fetured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center rounded-md">
+         <img src="images/tea-4.png" class="mx-auto mb-4">
+         <h2 class="font-semibold text-xl">Green Tea</h2>
+         <p class="text-[#777777]"">Creamer could be replaced by fresh milk</p>
+        </div>
+    </div>
+</section>
 </body>
 </html>
