--- a/index.html
+++ b/index.html
@@ -59,9 +59,30 @@ tea time at The<br> Tea House</h1>
          <div class="fetured-card bg-linear-to-b from-[#f4f4f4] to-[#f4f4f4] p-7 text-center rounded-md">
          <img src="images/tea-4.png" class="mx-auto mb-4">
          <h2 class="font-semibold text-xl">Green Tea</h2>
-         <p class="text-[#777777]"">Creamer could be replaced by fresh milk</p>
+         <p class="text-[#777777]">Creamer could be replaced by fresh milk</p>
         </div>
     </div>
 </section>
+<section class="container mx-auto grid grid-cols-1 md:grid grid-cols-2 gap-8 mb-[90px]">
+<div class="great-tea-left flex gap-[30px] grid grid-cols-2 grid grid-rows-3">
+    <div class="row-span-1 bg-gradient-to-r from-[#ff0000] to-[#ff8938] opacity-10 rounded-md"></div>
+    <div class="row-span-2 flex justify-center items-center bg-[#e6a6231a] rounded-md">
+        <img src="images/fresh-1.png">
+    </div>
+    <div class="row-span-2 flex justify-center items-center bg-[#5776391a] rounded-md">
+        <img src="images/fresh-2.png">
+    </div>
+    <div class="row-span-1  bg-gradient-to-r from-[#d9d9d9] to-[#ffff00] rounded-md"></div>
+</div>
+<div class="great-tea-right space-y-4">
+    <h2 class="text-[45px] font-bold">Great Tea, Freshly<br> Presented</h2>
+    <p class="text-[#777777]">The meaning of gong cha is chanese is to provide the best tea to emperor <br>from all possessions . It represents the highest quality and self expectation. <br>Establishing in 2006, Gong cha had been deeply appreciated by its custoers <br> because of good words of mouth and unique customized service orginated<br> from Taiwan.</p>
+    <h2 class="font-bold text-[20px]">Unique Taste</h2>
+    <p class="text-[#777777]">A Unique and different style from other teapots gives a<br> luxurious and minimalist impression</p>
+    <h2 class="font-bold text-[20px]">Premium Quality</h2>
+    <p class="text-[#777777]">Premium Quality that makes tea more elegant and more<br> durable when you use it.</p>
+</div>
+</section>
+
 </body>
 </html>
